--- a/src/less/combobox.less
+++ b/src/less/combobox.less
@@ -1,44 +1,45 @@
 
 /** combobox style **/
+@import "theme";
 
-@wd-sm: 80px;
-@wd-md: 120px;
-@wd-lg: 200px;
-@wd-xl: 300px;
+@font: @global-font;
+@hover-color: @theme-bg-color-7;
+@border-color: @theme-border-color-2;
+@z-index: @z-index-combobox;
 
-@font: "微软雅黑", sans-serif, arial;
+@item-height: 24px;
 
 .haili-combobox {
   padding: 4px;
   position: relative;
-  top: 6px;
-  left: 3px;
+  border-color: @border-color;
+  border: 1px solid @border-color;
+
+  &:hover {
+    cursor: pointer;
+  }
 }
 
+
 .haili-combobox-body {
-  border: 1px solid #ccc;
+  border: 1px solid @border-color;
   min-width: 160px;
   max-height: 200px;
   height: 200px;
   overflow: auto;
   position: absolute;
   display: none;
-  z-index: 10000;
+  z-index: @z-index;
   font-family: @font;
 
-  > .query,
-  > .body {
-    padding: 6px;
-  }
 
   > .query {
 
+
     input {
-      border: 1px solid #ccc;
-      width: 92%;
-      height: 20px;
-      border-radius: 10px;
-      padding: 0 4px;
+      border: 1px solid @border-color;
+      height: @item-height;
+      //border-radius: 10px;
     }
   }
 
@@ -48,10 +49,12 @@
       list-style: none;
 
       li {
-        padding: 2px;
+        padding: 2px 8px;
+        height: @item-height;
+        line-height: @item-height;
 
         &:hover {
-          background: #456789;
+          background: @hover-color;
           color: #fff;
           cursor: pointer;
         }
